--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -44,33 +44,33 @@ header.hidden {
 /* Stylowanie głównego obszaru treści */
 main {
     padding: 20px;
-    min-height: 700px;
-    margin-top: 60px; /* Dostosowanie do wysokości nagłówka */
+    min-height: calc(100vh - 60px);
     text-align: center;
 }
 
 /* Stylowanie sekcji głównej z informacjami o produkcie */
 .product-info-section-main .section-title-main {
-    font-size: 24px; /* Wielkość czcionki dla h5 */
-    font-weight: 700; /* Opcjonalnie: pogrubienie czcionki */
-    color: #102E44; /* Kolor czcionki */
+    font-size: 24px;
+    font-weight: 700;
+    color: #102E44;
     margin-bottom: 10px;
+    margin-top: 60px;
 }
 
 .product-info-section-main h1 {
-    font-size: 46px; /* Wielkość czcionki dla h1 */
-    font-weight: 800; /* Opcjonalnie: pogrubienie czcionki */
-    color: #102E44; /* Kolor czcionki */
+    font-size: 46px;
+    font-weight: 800;
+    color: #102E44;
 }
 
 /* Stylowanie zdjęcia produktu */
 .product-image-main {
-    max-width: 100%; /* Zdjęcie dostosowuje się do szerokości kontenera */
-    height: auto; /* Zachowanie proporcji zdjęcia */
+    max-width: 100%;
+    height: auto;
     display: block;
-    margin: 20px auto; /* Centrowanie zdjęcia z marginesem */
-    border-radius: 10px; /* Opcjonalnie: zaokrąglenie rogów zdjęcia */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Opcjonalnie: dodanie cienia */
+    margin: 20px auto;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Stylowanie linii <hr> w sekcji informacji o produkcie */
@@ -92,62 +92,67 @@ main {
 .content-main {
     transition: max-height 0.3s ease-out;
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Trzy kolumny */
-    gap: 10px; /* Odstępy między elementami */
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
 
 }
 
 /* Stylizacja dla każdego elementu danych */
 .content-main p {
-    background-color: #fafafa; /* Tło dla każdego elementu */
-    padding: 8px; /* Odstęp wewnętrzny */
-    border-radius: 5px; /* Zaokrąglone rogi */
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Delikatny cień */
-    text-align: left; /* Wyrównanie tekstu do lewej */
-    margin: 0; /* Brak marginesów między elementami */
+    background-color: #fafafa;
+    padding: 8px;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    margin: 0;
 }
 
 /* Opcjonalnie: stylizacja nagłówków w elementach danych */
 .content-main p strong {
-    display: block; /* Blokowy element */
-    margin-top: 5px; /* Odstęp poniżej nagłówka */
-    color: #102E44; /* Kolor nagłówka */
+    display: block;
+    margin-top: 5px;
+    color: #102E44;
 }
 /* Stylizacja dla przycisku z tekstem i strzałką */
 .toggle-button-main {
-    font-size: 18px; /* Rozmiar czcionki */
-    font-weight: bold; /* Pogrubienie tekstu */
-    color: #102E44; /* Kolor tekstu */
-    background: none; /* Brak tła */
-    border: none; /* Brak obramowania */
-    cursor: pointer; /* Kursor w formie ręki */
-    display: flex; /* Flexbox do ustawienia treści */
-    align-items: center; /* Wyrównanie pionowe */
-    justify-content: space-between; /* Rozstawienie elementów na całej szerokości */
-    width: 100%; /* Przyciski na pełną szerokość kontenera */
-    text-align: left; /* Wyrównanie tekstu do lewej */
+    font-size: 18px;
+    font-weight: bold;
+    color: #102E44;
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    text-align: left;
+    transition: color 0.3s;
 }
 
 .toggle-button-main:hover, .toggle-button-main.active {
-    color: #00497e; /* Kolor tekstu przy najechaniu lub aktywności */
+    color: #00497e;
 }
 
 .hidden-main {
-    display: none; /* Chowa treść, gdy klasa jest aktywna */
+    display: none;
 }
 
 /* Stylizacja strzałki */
 .toggle-button-main i {
-    transition: transform 0.3s ease; /* Płynna zmiana obrotu strzałki */
-    font-size: 14px; /* Rozmiar ikony */
-    color: #102E44; /* Kolor strzałki */
+    transition: transform 0.3s ease, color 0.3s ease;
+    font-size: 14px;
+    color: #102E44;
 }
 
-/* Strzałka obrócona w dół, gdy sekcja jest rozwinięta */
-.toggle-button-main.active i {
-    transform: rotate(180deg); /* Obrót strzałki */
-    color: #102E44; /* Kolor strzałki */
+.toggle-button-main:hover i {
+    color: #00497e;
 }
+
+.toggle-button-main.active i {
+    color: #00497e;
+    transform: rotate(180deg);
+}
+
 
 
 
@@ -162,43 +167,43 @@ main {
 /* Stylizacja dla elementu załącznika */
 .attachment-item {
     display: flex;
-    align-items: flex-start; /* Dopasowanie do górnej krawędzi */
+    align-items: flex-start;
     margin-top: 10px;
 }
 
 /* Ikona pliku */
 .attachment-item .fa-file-alt {
-    font-size: 40px; /* Rozmiar ikony */
-    color: #102E44; /* Kolor ikony */
-    margin-right: 10px; /* Odstęp między ikoną a szczegółami załącznika */
+    font-size: 40px;
+    color: #102E44;
+    margin-right: 10px;
 }
 
 /* Szczegóły załącznika */
 .attachment-details {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Wyrównanie do lewej strony */
+    align-items: flex-start;
 }
 
 /* Stylizacja nazwy załącznika */
 .attachment-name {
     font-size: 16px;
     color: #102E44;
-    text-decoration: none; /* Usunięcie podkreślenia */
+    text-decoration: none;
     margin-bottom: 4px;
     display: block;
-    text-align: left; /* Wyrównanie tekstu do lewej */
+    text-align: left;
 }
 
 .attachment-name:hover {
-    color: #00497e; /* Zmiana koloru podczas najechania myszką */
+    color: #00497e;
 }
 
 /* Stylizacja rozmiaru załącznika */
 .attachment-size {
     font-size: 14px;
     color: #666;
-    text-align: left; /* Wyrównanie tekstu do lewej */
+    text-align: left;
 }
 
 
@@ -359,27 +364,27 @@ footer {
 }
 @media (max-width: 1200px) and (min-width: 768px) {
     .footer-text i {
-        display: none; /* Ukrywa ikony w zakresie szerokości od 768px do 1200px */
+        display: none;
     }
     .footer-text {
         font-size: 14px !important;
     }
     .content-main {
-        grid-template-columns: repeat(2, 1fr); /* Dwie kolumny */
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 768px) {
     .content-main {
-        grid-template-columns: 1fr; /* Jedna kolumna */
+        grid-template-columns: 1fr;
     }
     .footer-heading .arrow-icon {
-        display: inline-block; /* Pokaż ikonę tylko na małych ekranach */
-        transition: transform 0.3s ease; /* Animacja obrotu */
+        display: inline-block;
+        transition: transform 0.3s ease;
     }
 
     .footer-heading.collapsible.active .arrow-icon {
-        transform: rotate(180deg); /* Obrót ikony, gdy sekcja jest rozwinięta */
+        transform: rotate(180deg);
     }
     .lang-flag {
         width: 30px;
