--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -125,12 +125,17 @@ main {
     transition: color 0.3s;
 }
 
-.toggle-button-main:hover, .toggle-button-main.active {
+.toggle-button-main:hover, .toggle-button-main:focus, .toggle-button-main.active {
     color: #00497e;
 }
 
-.hidden-main {
-    display: none;
+.toggle-button-main:focus {
+    outline: none;
+}
+
+/* Reset koloru przycisku po usunięciu klasy .active */
+.toggle-button-main:not(.active) {
+    color: #102E44;
 }
 
 /* Stylizacja strzałki */
@@ -140,12 +145,11 @@ main {
     color: #102E44;
 }
 
-.toggle-button-main:hover i {
+.toggle-button-main:hover i, .toggle-button-main.active i {
     color: #00497e;
 }
 
 .toggle-button-main.active i {
-    color: #00497e;
     transform: rotate(180deg);
 }
 
@@ -356,6 +360,9 @@ footer {
 }
 
 @media (max-width: 768px) {
+    .toggle-button-main:not(.active) {
+        color: #102E44;
+    }
     .content-main {
         grid-template-columns: 1fr;
     }
